--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Formation Git</title>
-</head>
-<body>
-    <h1>Formation Git</h1>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Formation Git</h1>
+      <div class="pictures">
+        <div class="picture1">
+          <img src="./medias/1.png" alt="img1" />
+        </div>
+        <div class="picture2">
+          <img src="./medias/2.png" alt="img2" />
+        </div>
+        <div class="picture3">
+          <img src="./medias/3.png" alt="img3" />
+        </div>
+        <div class="picture4">
+          <img src="./medias/4.png" alt="img4" />
+        </div>
+        <div class="picture1"></div>
+        <div class="picture1"></div>
+        <div class="picture1"></div>
+        <div class="picture1"></div>
+        <div class="picture1"></div>
+        <div class="picture1"></div>
+        <div class="picture1"></div>
+        <div class="picture1"></div>
+      </div>
+    </div>
+  </body>
 </html>
